--- a/frontend/helpdesk/package.json
+++ b/frontend/helpdesk/package.json
@@ -24,6 +24,7 @@
     "ngx-mask": "^13.1.13",
     "ngx-toastr": "^15.2.2",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.20",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
